--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,10 @@ edition = "2021"
 clap = { version = "4.5.4", features = ["derive"] }
 lazy_static = "1.4.0"
 log = "0.4.20"
+
+[dev-dependencies]
+criterion = { version = "0.4", features = ["html_reports"] }
+
+[[bench]]
+name = "ben"
+harness = false
