--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ log = "0.4.20"
 
 [dev-dependencies]
 criterion = { version = "0.4", features = ["html_reports"] }
+iai = "0.1"
 
 [[bench]]
-name = "ben"
+name = "time"
 harness = false
